--- a/app/src/main/res/layout/dialog_opcoes_senha.xml
+++ b/app/src/main/res/layout/dialog_opcoes_senha.xml
@@ -2,7 +2,135 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="16dp">
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Usar na senha:"
+        android:textStyle="bold"
+        android:textColor="@color/md_white_1000"
+        android:layout_marginTop="16dp"
+        android:textSize="8pt"
+        android:layout_gravity="center"
+        />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:id="@+id/include_on_pass_groupview"
+        >
+
+        <CheckedTextView
+            android:id="@+id/numbers_checkbox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
+            android:checked="true"
+            android:text="@string/numeros"
+            android:textColor="@color/md_white_1000"
+            android:textIsSelectable="true"
+            android:textSize="9pt"
+            android:minHeight="48dp"
+            android:gravity="center_vertical"
+            android:tag="numbers"
+            />
+
+
+        <CheckedTextView
+            android:id="@+id/lower_checkbox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
+            android:checked="true"
+            android:text="@string/minusculas"
+            android:textColor="@color/md_white_1000"
+            android:textIsSelectable="true"
+            android:textSize="9pt"
+            android:minHeight="48dp"
+            android:gravity="center_vertical"
+            android:tag="lower"
+
+            />
+
+        <CheckedTextView
+            android:id="@+id/upper_checkbox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
+            android:checked="false"
+            android:text="@string/maiusculas"
+            android:textColor="@color/md_white_1000"
+            android:textIsSelectable="true"
+            android:textSize="9pt"
+            android:minHeight="48dp"
+            android:gravity="center_vertical"
+            android:tag="upper"
+
+            />
+
+        <CheckedTextView
+            android:id="@+id/special_checkbox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
+            android:checked="false"
+            android:text="@string/caracteres_especiais"
+            android:textColor="@color/md_white_1000"
+            android:textIsSelectable="true"
+            android:textSize="9pt"
+            android:minHeight="48dp"
+            android:gravity="center_vertical"
+            android:tag="special"
+
+            />
+
+    </LinearLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Opções de senha:"
+        android:textStyle="bold"
+        android:textColor="@color/md_white_1000"
+        android:layout_marginTop="16dp"
+        android:textSize="8pt"
+        android:layout_gravity="center"
+
+        />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:orientation="horizontal">
+
+
+        <TextView
+            android:id="@+id/tag_textview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left|center"
+            android:text="Tags:"
+            android:textColor="@color/md_white_1000"
+            android:textSize="9pt"
+            android:minHeight="48dp"
+            android:gravity="center_vertical"
+
+            />
+
+        <EditText
+            android:id="@+id/password_tags_edittext"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right|center"
+            android:layout_marginLeft="16dp"
+            android:minHeight="48dp"
+            android:gravity="center_vertical"
+
+            />
+    </LinearLayout>
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -13,16 +141,32 @@
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="left|top"
+            android:layout_gravity="left|center"
             android:text="Tamanho:"
-            android:textStyle="bold" />
+            android:textColor="@color/md_white_1000"
+            android:textSize="9pt"
+            android:minHeight="48dp"
+            android:gravity="center_vertical"
+
+            />
 
         <AutoCompleteTextView
-            android:id="@+id/autoCompleteTextView"
+            android:id="@+id/password_size_autocompletetextview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal|top"
-            android:text="12" />
+            android:layout_gravity="right|center"
+            android:completionThreshold="1"
+            android:dropDownHeight="140dp"
+            android:ems="3"
+            android:inputType="number"
+            android:selectAllOnFocus="true"
+            android:text="12"
+            android:textSize="9pt"
+            android:minHeight="48dp"
+            android:gravity="center_vertical"
+
+            />
 
     </FrameLayout>
+
 </LinearLayout>
