xml senha concatenada. refactorings.

--- a/app/src/main/res/layout/options_dialog_concatenated_passwords.xml
+++ b/app/src/main/res/layout/options_dialog_concatenated_passwords.xml
@@ -4,68 +4,28 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp">
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
         android:text="Usar na senha:"
+        android:layout_gravity="center"
         />
 
     <LinearLayout
-        android:id="@+id/include_on_pass_groupview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        >
 
         <CheckedTextView
-            android:id="@+id/numbers_checkbox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:checkMark="?android:attr/listChoiceIndicatorMultiple"
             android:checked="true"
-            android:gravity="center_vertical"
-            android:tag="numbers"
-            android:text="@string/numeros"
+            android:text="@string/iniciais_maiusculas"
             android:textIsSelectable="true"
-             />
-
-
-        <CheckedTextView
-            android:id="@+id/lower_checkbox"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
-            android:checked="true"
             android:gravity="center_vertical"
-            android:tag="lower"
-            android:text="@string/minusculas"
-            android:textIsSelectable="true"
-            />
-
-        <CheckedTextView
-            android:id="@+id/upper_checkbox"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
-            android:checked="false"
-            android:gravity="center_vertical"
-            android:minHeight="48dp"
-            android:tag="upper"
-            android:text="@string/maiusculas"
-            android:textIsSelectable="true"
-            />
-
-        <CheckedTextView
-            android:id="@+id/special_checkbox"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
-            android:checked="false"
-            android:gravity="center_vertical"
-            android:tag="special"
-            android:text="@string/caracteres_especiais"
-            android:textIsSelectable="true"
+            android:tag="iniciais_maiusculas"
             />
 
     </LinearLayout>
@@ -73,8 +33,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
         android:text="Opções de senha:"
+        android:layout_gravity="center"
         />
 
     <LinearLayout
@@ -89,9 +49,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="left|center"
+            android:text="Tags (separar por vírgula):"
             android:gravity="center_vertical"
-            android:text="Tags:"
-
             />
 
         <EditText
@@ -100,9 +59,9 @@
             android:layout_height="wrap_content"
             android:layout_gravity="right|center"
             android:gravity="center_vertical"
-
             />
     </LinearLayout>
+
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -110,27 +69,71 @@
         android:layout_gravity="center_horizontal">
 
         <TextView
-            android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="left|center"
+            android:text="Número de palavras concatenadas:"
             android:gravity="center_vertical"
-            android:text="Tamanho:"
-
             />
 
         <AutoCompleteTextView
-            android:id="@+id/password_size_autocompletetextview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right|center"
             android:completionThreshold="1"
             android:ems="2"
-            android:gravity="center_vertical"
             android:inputType="number"
             android:selectAllOnFocus="true"
+            android:gravity="center_vertical"
+            />
+    </FrameLayout>
+
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left|center"
+            android:text="Tamanho máximo da senha:"
+            android:gravity="center_vertical"
             />
 
+        <AutoCompleteTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right|center"
+            android:completionThreshold="1"
+            android:ems="2"
+            android:inputType="number"
+            android:selectAllOnFocus="true"
+            android:gravity="center_vertical"
+            />
     </FrameLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left|center"
+            android:text="Usar caractéres separadores:"
+            android:gravity="center_vertical"
+            />
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right|center"
+            android:gravity="center_vertical"
+            />
+    </LinearLayout>
 
 </LinearLayout>
