--- a/app/src/main/res/layout/options_dialog_concatenated_passwords.xml
+++ b/app/src/main/res/layout/options_dialog_concatenated_passwords.xml
@@ -18,6 +18,7 @@
         >
 
         <CheckedTextView
+            android:id="@+id/incluir_maiusculas_checkbox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:checkMark="?android:attr/listChoiceIndicatorMultiple"
@@ -45,7 +46,6 @@
 
 
         <TextView
-            android:id="@+id/tag_textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="left|center"
@@ -54,7 +54,7 @@
             />
 
         <EditText
-            android:id="@+id/password_tags_edittext"
+            android:id="@+id/password_tag_textview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="right|center"
@@ -77,6 +77,7 @@
             />
 
         <AutoCompleteTextView
+            android:id="@+id/nr_words_textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right|center"
@@ -95,6 +96,7 @@
         android:layout_gravity="center_horizontal">
 
         <TextView
+
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="left|center"
@@ -103,6 +105,7 @@
             />
 
         <AutoCompleteTextView
+            android:id="@+id/password_max_length_textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right|center"
@@ -129,6 +132,7 @@
             />
 
         <EditText
+            android:id="@+id/separators_textview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="right|center"
