--- a/app/src/main/res/layout/options_dialog_concatenated_passwords.xml
+++ b/app/src/main/res/layout/options_dialog_concatenated_passwords.xml
@@ -4,6 +4,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp">
+
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -38,6 +40,7 @@
         android:layout_gravity="center"
         />
 
+    <!-- Campo TAGs - removido provisoriamente
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -61,7 +64,7 @@
             android:gravity="center_vertical"
             />
     </LinearLayout>
-
+    -->
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -82,10 +85,12 @@
             android:layout_height="wrap_content"
             android:layout_gravity="right|center"
             android:completionThreshold="1"
-            android:ems="2"
+            android:ems="3"
+            android:text="3"
             android:inputType="number"
             android:selectAllOnFocus="true"
-            android:gravity="center_vertical"
+            android:dropDownWidth="56dp"
+            android:gravity="center"
             />
     </FrameLayout>
 
@@ -93,7 +98,8 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal">
+        android:layout_gravity="center_horizontal"
+        >
 
         <TextView
 
@@ -109,20 +115,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right|center"
+            android:text="60"
             android:completionThreshold="1"
-            android:ems="2"
+            android:ems="3"
             android:inputType="number"
             android:selectAllOnFocus="true"
-            android:gravity="center_vertical"
+            android:gravity="center"
+            android:dropDownWidth="56dp"
             />
     </FrameLayout>
 
-    <LinearLayout
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:orientation="horizontal">
-
+        >
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -133,11 +140,13 @@
 
         <EditText
             android:id="@+id/separators_textview"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right|center"
-            android:gravity="center_vertical"
+            android:gravity="center"
+            android:ems="3"
+            android:text="\@"
             />
-    </LinearLayout>
+    </FrameLayout>
 
 </LinearLayout>
