--- a/app/src/main/res/drawable/circle_pressed.xml
+++ b/app/src/main/res/drawable/circle_pressed.xml
@@ -1,4 +1,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval" >
-    <solid android:color="@color/md_black_1000" />
+    <solid android:color="#ffaaff55" />
+
+
 </shape>
