--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -20,4 +20,30 @@
         <item>38</item>
         <item>44</item>
     </integer-array>
+
+    <integer-array name="password_max_sizes">
+        <item>15</item>
+        <item>20</item>
+        <item>25</item>
+        <item>30</item>
+        <item>35</item>
+        <item>40</item>
+        <item>45</item>
+        <item>50</item>
+        <item>55</item>
+        <item>60</item>
+    </integer-array>
+
+    <integer-array name="word_count">
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+        <item>6</item>
+    </integer-array>
+
+
+
+
+
 </resources>
