--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,4 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:custom="http://schemas.android.com/apk/res-auto"
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,36 +9,31 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-    <fragment
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:name="br.com.alexpfx.app.gerasenha2015.fragments.CurrentPasswordFragment"
-        android:id="@+id/current_password_fragment"
-        />
 
-
-    <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <android.support.v4.widget.DrawerLayout
         android:id="@+id/overflow_menu_drawerlayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fadeScrollbars="true">
 
-        <FrameLayout
-            android:id="@+id/main_content_frame"
+        <fragment
+            android:id="@+id/current_password_fragment"
+            android:name="br.com.alexpfx.app.gerasenha2015.fragments.CurrentPasswordFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
+
+
+
         <android.support.v7.widget.RecyclerView
             android:id="@+id/overflow_menu_recyclerview"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="start"
+            android:background="@color/md_black_1000"
             android:scrollbars="vertical" />
 
-
     </android.support.v4.widget.DrawerLayout>
-
-
 
 
 </LinearLayout>
