--- a/app/src/main/res/layout/fragment_current_password.xml
+++ b/app/src/main/res/layout/fragment_current_password.xml
@@ -4,8 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:paddingLeft="16dp"
-    android:paddingRight="8dp"
-    >
+    android:paddingRight="8dp">
 
     <TextView
         android:id="@+id/tags_label"
@@ -103,63 +102,48 @@
         android:textStyle="bold" />
 
     <TextView
+        android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="128bits: "
-        android:textColor="@color/md_white_1000"
-        android:textSize="13sp"
-        android:textStyle="bold"
         android:layout_alignBottom="@+id/forca_senha_label"
         android:layout_toEndOf="@id/forca_senha_label"
         android:layout_toRightOf="@id/forca_senha_label"
-        android:id="@+id/textView4" />
+        android:text="128bits: "
+        android:textColor="@color/md_white_1000"
+        android:textSize="13sp"
+        android:textStyle="bold" />
 
-
-    <ImageButton
-        android:id="@+id/btn_password_settings"
-        android:layout_width="56dp"
-        android:layout_height="56dp"
-        android:alpha="5"
-        android:background="@drawable/circle"
-        android:elevation="2dp"
-        android:src="@drawable/ic_action_settings"
-        android:layout_below="@+id/forca_senha_label"
-        android:layout_alignLeft="@+id/forca_senha_label"
-        android:layout_alignStart="@+id/forca_senha_label" />
-
-    <ImageButton
-        android:id="@+id/btn_new_password"
-        android:layout_width="56dp"
-        android:layout_height="56dp"
-        android:alpha="5"
-        android:background="@drawable/circle"
-        android:elevation="2dp"
-        android:src="@drawable/ic_action_new"
-        android:layout_below="@+id/forca_senha_label"
-        android:layout_toRightOf="@+id/password_tag_textview"
-        android:layout_toEndOf="@+id/password_tag_textview" />
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_column="1"
-        android:orientation="horizontal"
-        android:layout_gravity="right"
-        android:layout_alignTop="@+id/div2"
-        android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:id="@+id/linearLayout">
+        android:layout_alignParentRight="true"
+        android:layout_alignTop="@+id/div2"
+        android:layout_column="1"
+        android:layout_gravity="right"
+        android:orientation="horizontal">
 
+
+        <ImageButton
+            android:id="@+id/btn_password_settings"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@null"
+            android:baselineAlignBottom="false"
+            android:clickable="true"
+            android:src="@drawable/ic_action_settings"
+            android:tint="@color/md_white_1000" />
 
         <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@null"
-            android:src="@drawable/ic_action_copy"
-            android:tint="@color/md_white_1000"
             android:baselineAlignBottom="false"
             android:clickable="true"
-            />
+            android:src="@drawable/ic_action_copy"
+            android:tint="@color/md_white_1000" />
 
         <ImageButton
             android:layout_width="wrap_content"
@@ -167,6 +151,31 @@
             android:background="@null"
             android:src="@drawable/ic_action_share"
             android:tint="@color/md_white_1000" />
+
+
     </LinearLayout>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
+        <ImageButton
+            android:id="@+id/btn_new_password"
+            android:layout_width="56dp"
+            android:layout_height="56dp"
+            android:layout_gravity="right|bottom"
+            android:layout_margin="16dp"
+            android:layout_marginRight="8dp"
+            android:alpha="5"
+            android:background="@drawable/circle"
+            android:elevation="2dp"
+            android:src="@drawable/ic_action_new"
+
+            />
+
+
+    </FrameLayout>
+
 
 </RelativeLayout>
