--- a/app/src/main/res/layout/fragment_current_password.xml
+++ b/app/src/main/res/layout/fragment_current_password.xml
@@ -30,12 +30,14 @@
         android:textSize="13sp"
         android:textStyle="bold" />
 
+
     <View
+        android:id="@+id/div1"
         android:layout_width="match_parent"
-        android:layout_height="1dp"
+        android:layout_height="3dp"
         android:layout_below="@+id/tags_label"
         android:layout_marginTop="4dp"
-        android:background="@color/md_white_1000" />
+        android:background="@color/md_yellow_500" />
 
 
     <TextView
@@ -67,7 +69,7 @@
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/generated_password_textview"
+        android:id="@+id/current_password_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
@@ -83,10 +85,11 @@
     <View
         android:id="@+id/div2"
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_below="@+id/generated_password_textview"
+        android:layout_height="3dp"
+        android:layout_below="@+id/current_password_textView"
         android:layout_marginTop="4dp"
-        android:background="@color/md_white_1000" />
+        android:layout_marginBottom="4dp"
+        android:background="@color/md_yellow_500" />
 
 
     <TextView
@@ -123,6 +126,7 @@
         android:layout_alignTop="@+id/div2"
         android:layout_column="1"
         android:layout_gravity="right"
+        android:layout_marginTop="4dp"
         android:orientation="horizontal">
 
 
