--- a/app/src/main/res/layout/fragment_current_password.xml
+++ b/app/src/main/res/layout/fragment_current_password.xml
@@ -6,53 +6,18 @@
     android:paddingLeft="16dp"
     android:paddingRight="8dp">
 
-    <TextView
-        android:id="@+id/tags_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:text="tags: "
-        android:textColor="@color/md_white_1000"
-        android:textSize="13sp"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/password_tag_textview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/textView3"
-        android:layout_toEndOf="@+id/tags_label"
-        android:layout_toRightOf="@+id/tags_label"
-        android:text="email"
-        android:textColor="@color/md_white_1000"
-        android:textSize="13sp"
-        android:textStyle="bold" />
 
 
     <View
         android:id="@+id/div1"
         android:layout_width="match_parent"
-        android:layout_height="3dp"
-        android:layout_below="@+id/tags_label"
-        android:layout_marginTop="4dp"
+        android:layout_height="2dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginTop="2dp"
         android:background="@color/md_yellow_500" />
 
 
-    <TextView
-        android:id="@+id/gen_date_textview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/password_tag_textview"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_gravity="center"
-        android:text="00:00"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:textColor="@color/md_white_1000"
-        android:textSize="13sp"
-        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/textView3"
@@ -60,8 +25,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/tags_label"
-        android:layout_marginTop="16dp"
+        android:layout_below="@+id/div1"
+        android:layout_marginTop="2dp"
         android:gravity="left"
         android:text="Senha Gerada:"
         android:textColor="@color/md_white_1000"
@@ -85,10 +50,9 @@
     <View
         android:id="@+id/div2"
         android:layout_width="match_parent"
-        android:layout_height="3dp"
+        android:layout_height="2dp"
         android:layout_below="@+id/current_password_textView"
-        android:layout_marginTop="4dp"
-        android:layout_marginBottom="4dp"
+        android:layout_marginTop="2dp"
         android:background="@color/md_yellow_500" />
 
 
@@ -126,7 +90,7 @@
         android:layout_alignTop="@+id/div2"
         android:layout_column="1"
         android:layout_gravity="right"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="2dp"
         android:orientation="horizontal">
 
 
