atribuir ações aos botões copiar e compartilhar

--- a/app/src/main/res/layout/fragment_current_password.xml
+++ b/app/src/main/res/layout/fragment_current_password.xml
@@ -105,6 +105,7 @@
             android:tint="@color/md_white_1000" />
 
         <ImageButton
+            android:id="@+id/btn_copy_password"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@null"
@@ -114,6 +115,7 @@
             android:tint="@color/md_white_1000" />
 
         <ImageButton
+            android:id="@+id/btn_share_password"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@null"
