--- a/app/src/main/res/layout/fragment_current_password.xml
+++ b/app/src/main/res/layout/fragment_current_password.xml
@@ -34,7 +34,7 @@
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/current_password_textView"
+        android:id="@+id/tv_current_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
@@ -51,30 +51,30 @@
         android:id="@+id/div2"
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        android:layout_below="@+id/current_password_textView"
+        android:layout_below="@+id/tv_current_password"
         android:layout_marginTop="2dp"
         android:background="@color/md_yellow_500" />
 
 
     <TextView
-        android:id="@+id/forca_senha_label"
+        android:id="@+id/label_forca_senha"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@id/div2"
-        android:text="força da senha: "
+        android:text="entropia: "
         android:textColor="@color/md_white_1000"
         android:textSize="13sp"
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/tv_password_strength"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/forca_senha_label"
-        android:layout_toEndOf="@id/forca_senha_label"
-        android:layout_toRightOf="@id/forca_senha_label"
+        android:layout_alignBottom="@id/label_forca_senha"
+        android:layout_toEndOf="@id/label_forca_senha"
+        android:layout_toRightOf="@id/label_forca_senha"
         android:text="128bits: "
         android:textColor="@color/md_white_1000"
         android:textSize="13sp"
